[package]
name = "swarm"
version = "0.1.0"
authors = ["Pavlíček Vilém <pavlicek@cngroup.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
tokio = { version = "0.2.2", features = ["full"] }
futures = "0.3"
