[package]
name = "Hive"
version = "0.1.0"
authors = ["Pavlíček Vilém <vildapavlicek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tokio = { version = "0.2.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
